# vdoc

./: .cruft.json  .gitignore  .prettierignore  Dockerfile  Dockerfile.dokploy  Dockerfile.prod  README.md  README.rst  biome.json  eslint.config.js  jreleaser.yml  jreleaser.yml.rej  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pyproject.toml.rej  renovate.json5  setup.cfg  sonar-project.properties  start_dev.py  tox.ini  tox.ini.rej  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-jfrog/: action.yml
.github/workflows/: auto_label_preview.yml  build.yml  lint.yml  linting.yml  pipeline.yml  pr_lint.yml  publish.yml  python_template_update_checks.yml  setup.yml  template_update.yml  tests_and_coverage.yml  zizmor.yml
docs/: conf.py  configuration.rst  development.rst  getting_started.rst  index.md  index.rst  plugins.rst  ruff.toml
docs/_scripts/: generate_license_information.py
docs/_static/: custom.css
docs/_static/default/css/: custom.css
docs/plugins/: footer.rst  theme.rst
src/ui/: App.tsx  DocuCanvas.tsx  MenuBar.tsx  index.html  main.tsx  routeTree.gen.ts
src/ui/__tests__/helpers/: iframeHelpers.test.ts  projectHelpers.test.ts  routeHelpers.test.ts
src/ui/components/: DeprecatedVersionBanner.tsx  DocumentationComponent.tsx  EmptyState.tsx  ErrorComponent.tsx  IFrame.tsx  LandingPage.tsx  LoadingSpinner.tsx  MenuBar.tsx  ProjectVersionsOverview.tsx  QueryStateHandler.tsx  RootLayout.tsx  ScrollToTop.tsx  SettingsSidebar.tsx  VersionDropdown.tsx
src/ui/components/integrations/: OramaSearchIntegration.tsx
src/ui/components/plugins/: FooterPlugin.tsx  OramaSearchPlugin.tsx
src/ui/contexts/: IFrameScrollContext.tsx  IFrameScrollProvider.tsx
src/ui/helpers/: APIFunctions.ts  EmptyState.tsx  GlobalStore.tsx  IFrame.ts  Projects.ts  QueryStateHandler.tsx  RouteHelpers.ts  Versions.ts
src/ui/icons/: VDocLogo.tsx
src/ui/interfacesAndTypes/: ColorModes.ts  Error.ts  LinkButton.tsx  Project.ts  Store.ts  testIDs.ts
src/ui/interfacesAndTypes/integrations/: IntegrationBase.ts  OramaIntegrationI.ts
src/ui/interfacesAndTypes/plugins/: FooterPlugin.ts  OramaPluginT.ts  PluginBase.ts  ThemePlugin.ts
src/ui/routes/: __root.tsx  index.lazy.tsx  index.tsx
src/ui/routes/$projectName/: $version.$.tsx  index.tsx
src/ui/routes/$projectName/versions/: $version.tsx  index.tsx
src/ui/routes/projects/$projectName/: index.tsx
src/ui/routes/projects/$projectName/versions/: $version.$.tsx  $version.tsx  index.tsx
src/vdoc/: __init__.py  constants.py
src/vdoc/api/: __init__.py  lifespan.py
src/vdoc/api/dependencies/: __init__.py  auth.py
src/vdoc/api/routes/: __init__.py  integrations.py  plugins.py  project_categories.py  projects.py  settings.py  version.py
src/vdoc/cli/: main.py  run.py
src/vdoc/exceptions/: __init__.py
src/vdoc/methods/api/: __init__.py  project_categories.py  projects.py
src/vdoc/methods/cli/: cli_run_method.py
src/vdoc/models/: __init__.py  project.py  project_category.py
src/vdoc/models/integrations/: __init__.py  base.py  orama.py
src/vdoc/models/plugins/: __init__.py  base.py  footer.py  orama.py  theme.py
src/vdoc/settings/: __init__.py
tests/: conftest.py
tests/integration/: test_intersphinx.py  test_serve_projects.py
tests/resources/sample-docs/meta-project/: conf.py  features.rst  index.rst
tests/resources/sample-docs/project-one/: conf.py  examples.rst  get_started.rst  index.rst
tests/resources/sample-docs/project-two/: conf.py  index.rst
tests/ui/: base.ts  helpers.ts  testAnchorNavigation.spec.ts  testAppName.spec.ts  testDownloadLink.spec.ts  testIndexPage.spec.ts  testLinkSubstitution.spec.ts  testNavigation.spec.ts  testPageNavigationRace.spec.ts  testProjectDocumentation.spec.ts  testScrollBehavior.spec.ts  testSidebar.spec.ts  testToggleColorMode.spec.ts
tests/ui/integrations/: testOramaIntegration.spec.ts
tests/ui/plugins/: testFooterPlugin.spec.ts  testOramaPlugin.spec.ts  testThemePlugin.spec.ts
tests/ui/resources/: mockedDownload.xml  mockedDownloadPage.html  mockedExamples.html  mockedIndex.html  mockedSearch.html  nonExisting.html  style.css
tests/unit/: test_app_functions.py
tests/unit/api/: __init__.py
tests/unit/api/routes/: __init__.py  test_misc_routes.py  test_project_category_routes.py  test_project_routes.py  test_settings_routes.py
tests/unit/api/routes/integrations/: __init__.py  test_load_routers.py
tests/unit/api/routes/plugins/: __init__.py  test_load_routers.py  test_theme_plugin_routes.py
tests/unit/cli/: __init__.py  test_main_cli.py  test_run_cli.py
tests/unit/methods/: __init__.py
tests/unit/methods/api/: __init__.py  test_project_methods.py
tests/unit/methods/cli/: __init__.py  test_cli_run_method.py
tests/unit/models/: test_project.py
tests/unit/models/integrations/: __init__.py  test_load_integrations.py  test_orama_integration.py
tests/unit/models/plugins/: __init__.py  test_footer_plugin.py  test_load_plugins.py  test_orama_plugin.py  test_theme_plugin.py
tests/unit/settings/: __init__.py  test_settings.py
tests/utils/: __init__.py
