[metadata]
name = vdoc
author = Jan-Frederik Schmidt
author_email = jan-frederik.schmidt@vorausrobotik.com
description = Multi version documentation hosting.
long_description = file:README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/vorausrobotik/vdoc


[options]
python_requires = >=3.11
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata
    packaging
    fastapi
    typer
    uvicorn
    pydantic-settings~=2.0
    voraus-logging-lib


[options.packages.find]
where = src

[options.package_data]
* = py.typed

vdoc =
    docs/**
    webapp/**

[options.extras_require]
dev =
    %(tox)s
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

lint =
    %(lint-template)s
    # Add your linting dependencies below this line

test =
    %(test-template)s
    # Add your testing dependencies below this line.
    # Dependencies that are imported in one of your files
    # must also be added to the linting dependencies.
    httpx

doc =
    %(doc-template)s
    # Add your documentation dependencies below this line

build =
    %(build-template)s
    # Add your build dependencies below this line


##########################################
# DO NOT CHANGE ANYTHING BELOW THIS LINE #
##########################################

tox =
    tox==4.23.2
    tox-uv==1.16.0

lint-template =
    isort==5.13.2
    black==24.10.0
    mypy==1.13.0
    pylint==3.3.1
    pytest==8.3.3
    types-docutils
    types-setuptools
    jinja2==3.1.4
    ruff==0.7.3

test-template =
    pytest==8.3.3
    pytest-randomly==3.16.0
    pytest-cov==6.0.0
    coverage[toml]==7.6.4

doc-template =
    sphinx==8.1.3
    sphinxawesome-theme==5.3.2
    sphinx-selective-exclude==1.0.3
    sphinx-autodoc-typehints==2.5.0
    pip-licenses==5.0.0
    jinja2==3.1.4

build-template =
    build[virtualenv]==1.2.1
